<resources>
    <string name="app_name">To-Do List</string>

    <string name="main_activity_name">All Tasks</string>
    <string name="add_task_activity_name">Add a New Task</string>

    <!-- Strings for MainActivity -->
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>

    <!-- Strings for AddTaskActivity -->
    <!-- This etaskEntrytask has a unicode character for "..." = "&#8230;" -->
    <string name="description">Description</string>
    <string name="edit_task_description">Describe your taskEntry&#8230;</string>
    <string name="category">Category</string>
    <string name="priority_string">Priority</string>
    <string name="Date">Due Date</string>
    <string name="edit_task_date">Date not set</string>
    <string name="categoryLayout">Category</string>

    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>

    <string name="add_button">Add</string>
    <string name="update_button">Update</string>

    <string-array name="topics">
        <item>Today</item>
        <item>Upcoming</item>
        <item>Filter</item>
    </string-array>
</resources>
